# cvc_felipe

./: LICENSE  NetworkGraph.csv  README.md  VisualField_FMedeiros.ipynb  pyproject.toml
output/simpleAE/: simpleAE_autoecoder.h5  simpleAE_decoder.h5  simpleAE_encoder.h5
