[tool.poetry]
name = "felipe-cvc"
version = "0.1.0"
description = "Visual Field Pipeline"
authors = ["Rafael Scherer <56699691+redcheck-lab@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "felipe_cvc"}]

[tool.poetry.dependencies]
python = "^3.9"
zipp = "3.11.0"
absl-py = "1.3.0"
aiohttp = "3.8.3"
aiosignal = "1.2.0"
ann-visualizer = "2.5"
asttokens = "2.0.5"
astunparse = "1.6.3"
async-timeout = "4.0.2"
attrs = "21.2.0"
backcall = "0.2.0"
bleach = "4.1.0"
blinker = "1.4"
certifi = "2022.12.7"
cffi = "1.15.0"
charset-normalizer = "2.0.4"
click = "8.0.4"
colorama = "0.4.4"
comm = "0.1.2"
contourpy = "1.0.7"
cryptography = "38.0.4"
cycler = "0.11.0"
decorator = "5.1.0"
defusedxml = "0.7.1"
entrypoints = "0.3"
executing = "0.8.3"
flit-core = "3.6.0"
frozenlist = "1.3.3"
future = "0.18.2"
gast = "0.4.0"
google-auth = "2.6.0"
google-auth-oauthlib = "0.4.1"
google-pasta = "0.2.0"
graphviz = "0.20.1"
grpcio = "1.42.0"
idna = "3.4"
imageio = "2.25.0"
importlib-metadata = "4.11.3"
install = "1.3.5"
ipython-genutils = "0.2.0"
jinja2 = "3.0.2"
joblib = "1.2.0"
jupyterlab-pygments = "0.1.2"
jupyterlab-widgets = "1.0.2"
keras = "2.6.0"
keras-adabound = "0.6.0"
keras-preprocessing = "1.1.2"
kiwisolver = "1.3.2"
markdown = "3.4.1"
markupsafe = "2.1.1"
matplotlib = "3.4.3"
matplotlib-inline = "0.1.3"
mistune = "0.8.4"
mpmath = "1.2.1"
multidict = "6.0.2"
nest-asyncio = "1.5.1"
networkx = "3.0"
nolds = "0.5.2"
nose = "1.3.7"
numpy = "1.22.4"
oauthlib = "3.2.1"
opencv-python = "4.7.0.68"
opt-einsum = "3.3.0"
packaging = "21.2"
pandas = "1.3.4"
pandocfilters = "1.5.0"
parso = "0.8.2"
pickleshare = "0.7.5"
pillow = "9.3.0"
pip = "23.0.1"
platformdirs = "2.5.2"
prometheus-client = "0.12.0"
prompt-toolkit = "3.0.21"
protobuf = "3.17.2"
psutil = "5.9.0"
pure-eval = "0.2.2"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pydot = "1.4.2"
pygments = "2.10.0"
pyjwt = "2.4.0"
pyopenssl = "22.0.0"
pyparsing = "2.4.7"
pyrsistent = "0.18.0"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytz = "2021.3"
pywavelets = "1.4.1"
pywinpty = "1.1.5"
pyyaml = "6.0"
pyzmq = "22.3.0"
qtpy = "1.11.2"
requests = "2.28.1"
requests-oauthlib = "1.3.0"
rsa = "4.7.2"
scikit-plot = "0.3.7"
seaborn = "0.12.2"
send2trash = "1.8.0"
setuptools = "65.6.3"
six = "1.16.0"
stack-data = "0.2.0"
sympy = "1.9"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.1"
tensorflow-estimator = "2.6.0"
termcolor = "2.1.0"
terminado = "0.12.1"
testpath = "0.5.0"
threadpoolctl = "3.1.0"
tifffile = "2023.2.3"
torch = "1.12.1"
torchaudio = "0.12.1"
tornado = "6.1"
tqdm = "4.65.0"
typeguard = "2.13.3"
typing-extensions = "4.4.0"
urllib3 = "1.26.14"
wcwidth = "0.2.5"
webencodings = "0.5.1"
werkzeug = "2.2.2"
wheel = "0.35.1"
win-inet-pton = "1.1.0"
wincertstore = "0.2"
xyzservices = "2023.2.0"
yarl = "1.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
